update favicon, timezone and local files

--- a/_posts/2021-11-12-iWant.md
+++ b/_posts/2021-11-12-iWant.md
@@ -5,11 +5,11 @@ author: Karina
 categories: [Comunicação Aumentativa, GDevelop, Jogos Educativos, Desenvolvimento 2D, Transtorno do Espectro Autista, Autism Spectrum Disorder, Inclusão Digital, Tecnologias Assistivas, Educação Infantil, iWant Project]
 tags: [autismo, autismo infantil, comunicação alternativa, comunicação para autistas, TEA, ASD, iWant, iWant 2.0, GDevelop, jogos 2D, jogos educativos, jogos para autistas, inclusão, educação especial, tecnologias assistivas, accessibility, autism communication, autism support, special education]
 render_with_liquid: false
-media_subpath: https://karinagante.github.io/img/iwant.png
 image:
-  path: https://karinagante.github.io/img/iwant.png
-
+  path: /assets/img/projects/iwant.png
+  
 ---
+
 
 # iWant
 
