--- a/_posts/2022-12-05-Piratefy.md
+++ b/_posts/2022-12-05-Piratefy.md
@@ -5,9 +5,8 @@ author: Karina
 categories: [Piratefy, Player de Música Web, Streaming de Música, Desenvolvimento Full Stack, HTML5, CSS3, JavaScript, PHP, MySQL, jQuery, Bootstrap, AWS EC2, AWS Elastic Beanstalk, AWS RDS, Projeto Acadêmico, Web Application, Clone do Spotify, Desenvolvimento Web, Web Dev, Aplicações em Nuvem]
 tags: [piratefy, player de música, web music player, music streaming, spotify clone, html5, css3, javascript, php, mysql, jquery, bootstrap, aws, aws ec2, aws rds, elastic beanstalk, desenvolvimento web, desenvolvimento full stack, projeto acadêmico, web dev, cloud application, aplicação web]
 render_with_liquid: false
-media_subpath: https://karinagante.github.io/img/piratefy.png
 image:
-  path: https://karinagante.github.io/img/piratefy.png
+  path: /assets/img/projects/piratefy.png
 
 ---
 
