--- a/_posts/2023-12-15-iWantv2.md
+++ b/_posts/2023-12-15-iWantv2.md
@@ -5,10 +5,9 @@ author: Karina
 categories: [Tecnologia Assistiva, Comunicação Alternativa, Transtorno do Espectro Autista, Autismo, Aplicativo para Autistas, Educação Inclusiva, Inovação Educacional, TCC, Thunkable, Desenvolvimento de Aplicativos, Inclusão Digital, Eventos Acadêmicos, CONICT, IFCIÊNCIA]
 tags: [autismo, espectro autista, tea, asd, tecnologia assistiva, comunicação alternativa, aplicativo autismo, aplicativo para autistas, thunkable, iwant 2.0, tcc, inclusão digital, educação inclusiva, inovação tecnológica, congresso conict, feira ifciência, artigo publicado, desenvolvimento de apps, apps educacionais, ferramentas acessíveis]
 render_with_liquid: false
-media_subpath: https://karinagante.github.io/img/iwant2.0.png
 image:
-  path: https://karinagante.github.io/img/iwant2.0.png
-
+  path: /assets/img/projects/iwant2.0.png
+  
 ---
 
 # iWant 2.0
